Tests/Runtime2/Error/Props/.build/inspecterror.pr
{
  "name": "InspectError",
  "description": "No goal was provided. Please send the %goalForLlm% content (or describe the task you want completed) so I can generate the required JSON plan.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %errorMessage% = %!error.Message%",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    },
    {
      "index": 1,
      "text": "set %errorKey% = %!error.Key%",
      "lineNumber": 3,
      "indent": 0,
      "comment": null,
      "actions": [],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    },
    {
      "index": 2,
      "text": "set %errorStatusCode% = %!error.StatusCode%",
      "lineNumber": 4,
      "indent": 0,
      "comment": null,
      "actions": [],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Runtime2/Error/Props/InspectError.goal",
  "prPath": "/Tests/Runtime2/Error/Props/.build/inspecterror.pr",
  "hash": "a04c978e2dcf88fd3ad7c3ff05b8361a9e019e3440c9bbfcef137a4260d21a14",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}